# GPUJobSystem

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
examples/: img_kernel.cpp  multiple_invokations.cpp  simple_task.cpp
examples/performance/: utils.cpp  utils.h
examples/shaders/: edgedetect.comp  fibonacci.comp  sum.comp
src/: DeviceMemoryAllocator.cpp  DeviceMemoryAllocator.h  Job.cpp  Job.h  JobManager.cpp  JobManager.h  Resources.h
tests/: JobManagerTest.cpp  JobTest.cpp  helpers.h
